--- a/Resume.html
+++ b/Resume.html
@@ -78,18 +78,18 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
 $(document).ready(function(){
-  $(".experience").mouseover(function(){
+  $(".experience").click(function(){
     $(".company").fadeToggle("slow");
     $(".jobtitle").fadeToggle("slow");
     $(".task").fadeToggle("slow");
   });
 
-  $(".skills").mouseover(function(){
+  $(".skills").click(function(){
     $(".subject").fadeToggle("slow");
     $(".skill").fadeToggle("slow");
   });
 
-  $(".education").mouseover(function(){
+  $(".education").click(function(){
     $(".degree").fadeToggle("slow");
     $(".school").fadeToggle("slow");
     $(".extra").fadeToggle("slow");
