--- a/Resume.html
+++ b/Resume.html
@@ -130,7 +130,7 @@ $(document).ready(function(){
 </head>
 <body>
 <ul>
-    <li><a class="active" href="#home">Home</a></li>
+    <li><a class="active" href="./Main.html">Home</a></li>
     <li><a href="./Resume.html">Resume</a></li>
     <li><a href="./Shapes.html">Shapes Game</a></li>
     <li><a href="#about">About</a></li>
