--- a/Shapes.html
+++ b/Shapes.html
@@ -2,8 +2,41 @@
 <html>
 <head>
 <style>
+
+    ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    }
+
+    li {
+    float: left;
+    }
+
+    li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    }
+
+    li a:hover:not(.active) {
+    background-color: #111;
+    }
+
+    .active {
+    background-color: rgb(5, 9, 233);
+    }
+
     body {
-        background: rgb(226, 226, 226);
+        margin: 0%;
+        background-color: aliceblue;
     }
     #rct1 {
         background: blue;
@@ -185,6 +218,13 @@
 </script>
 </head>
 <body>
+<ul>
+  <li><a class="active" href="./Main.html">Home</a></li>
+  <li><a href="./Resume.html">Resume</a></li>
+  <li><a href="./Shapes.html">Game</a></li>
+  <li><a href="#about">About</a></li>
+</ul>
+<br>
     <h1 id="time">00:00:00</h1>
     <button id="start" onclick="start()">Start</button>
     <button id="clear" onclick="reset()">Reset</button>
