--- a/Me.html
+++ b/Me.html
@@ -57,8 +57,8 @@ $.getJSON('http://www.geoplugin.net/json.gp?jsoncallback=?', function(data) {
   <li><a class="active" href="./Main.html">Home</a></li>
   <li><a href="./Resume.html">Resume</a></li>
   <li><a href="./Shapes.html">Game</a></li>
+  <li><a href="./Me.html">Me</a></li>
   <li><a href="./You.html">You</a></li>
-  <li><a href="#about">About</a></li>
   <li><a href="https://github.com/HyleKenson">GitHub</a></li>
 </ul>
 
