--- a/Resume.html
+++ b/Resume.html
@@ -3,41 +3,41 @@
 <head>
     <title>Resume</title>
 <style>
-body {
-    margin:0;
-    background-color: aliceblue;
-}
+    body {
+        margin:0;
+        background-color: aliceblue;
+    }
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
+    ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    }
 
-li {
-  float: left;
-}
+    li {
+    float: left;
+    }
 
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
+    li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    }
 
-li a:hover:not(.active) {
-  background-color: #111;
-}
+    li a:hover:not(.active) {
+    background-color: #111;
+    }
 
-.active {
-  background-color: rgb(5, 9, 233);
-}
+    .active {
+    background-color: rgb(5, 9, 233);
+    }
     p {
         font-family: "Times New Roman", Times, serif;
     }
@@ -130,10 +130,12 @@ $(document).ready(function(){
 </head>
 <body>
 <ul>
-    <li><a class="active" href="./Main.html">Home</a></li>
-    <li><a href="./Resume.html">Resume</a></li>
-    <li><a href="./Shapes.html">Shapes Game</a></li>
-    <li><a href="#about">About</a></li>
+  <li><a class="active" href="./Main.html">Home</a></li>
+  <li><a href="./Resume.html">Resume</a></li>
+  <li><a href="./Shapes.html">Game</a></li>
+  <li><a href="./Me.html">Me</a></li>
+  <li><a href="./You.html">You</a></li>
+  <li><a href="https://github.com/HyleKenson">GitHub</a></li>
 </ul>
 <p id="name">Kyle Henson</p>
 <p id="contact">Kyle495@gmail.com | (815) 409-2869 |  https://github.com/HyleKenson</p>
