--- a/Shapes.html
+++ b/Shapes.html
@@ -222,7 +222,9 @@
   <li><a class="active" href="./Main.html">Home</a></li>
   <li><a href="./Resume.html">Resume</a></li>
   <li><a href="./Shapes.html">Game</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a href="./Me.html">Me</a></li>
+  <li><a href="./You.html">You</a></li>
+  <li><a href="https://github.com/HyleKenson">GitHub</a></li>
 </ul>
 <br>
     <h1 id="time">00:00:00</h1>
