--- a/Info.html
+++ b/Info.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 <style>
+
 body {
     margin:0;
-}
+    background-color: aliceblue;}
 
 ul {
   list-style-type: none;
@@ -37,6 +38,9 @@ li a:hover:not(.active) {
   background-color: rgb(5, 9, 233);
 }
 
+p {
+    font-size: 200%;
+}
 
 </style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -48,9 +52,9 @@ function getInfo(){
         var ip = data.geoplugin_request;
         var city = data.geoplugin_city;
         var state = data.geoplugin_regionName;
-        document.getElementById("ip").innerHTML = ip;
-        document.getElementById("city").innerHTML = city;
-        document.getElementById("state").innerHTML = state;
+        document.getElementById("ip").innerHTML = "Your public IP address: " + ip;
+        document.getElementById("city").innerHTML = "Your city: " + city;
+        document.getElementById("state").innerHTML = "Your state: " + state;
     });
 }
 
@@ -65,11 +69,11 @@ setTimeout(function() {
 </head>
 <body>
 <ul>
-  <li><a class="active" href="./Main.html">Home</a></li>
+  <li><a class="active" href="./Index.html">Home</a></li>
   <li><a href="./Resume.html">Resume</a></li>
   <li><a href="./Shapes.html">Game</a></li>
-  <li><a href="./Me.html">Me</a></li>
-  <li><a href="./You.html">You</a></li>
+  <li><a href="./Newsletter.html">Newsletter</a></li>
+  <li><a href="./Info.html">Info</a></li>
   <li><a href="https://github.com/HyleKenson">GitHub</a></li>
 </ul>
 <br><br>
