--- a/Resume.html
+++ b/Resume.html
@@ -130,11 +130,11 @@ $(document).ready(function(){
 </head>
 <body>
 <ul>
-  <li><a class="active" href="./Main.html">Home</a></li>
+  <li><a class="active" href="./Index.html">Home</a></li>
   <li><a href="./Resume.html">Resume</a></li>
   <li><a href="./Shapes.html">Game</a></li>
-  <li><a href="./Me.html">Me</a></li>
-  <li><a href="./You.html">You</a></li>
+  <li><a href="./Newsletter.html">Newsletter</a></li>
+  <li><a href="./Info.html">Info</a></li>
   <li><a href="https://github.com/HyleKenson">GitHub</a></li>
 </ul>
 <p id="name">Kyle Henson</p>
